integrador_2/My Car/mycar/src/main/java/com/example/mycar/error/AlquilerYaFacturadoException.java
package com.example.mycar.error;

public class AlquilerYaFacturadoException extends RuntimeException {
    public AlquilerYaFacturadoException(Long alquilerId) {
        super("El alquiler " + alquilerId + " ya tiene factura asociada");
    }
}

